--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,4 +1,4 @@
-/* primefaces.org */
+/* HSL Darken = level - n; Lighten = level + n */
 /**
 * @Description:
 * The overall containing body holding both the sidebar and the rest of the page body
