--- a/styles/pages.scss
+++ b/styles/pages.scss
@@ -51,7 +51,7 @@
   .card-bandage {
     /* border-radius: inherit; */
     transform: scale(1.025);
-    background-color: $secondary-dark;
+    background-color: $secondary;
   }
 }
 
