--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 /* Scrollbar - Start */
-/* primefaces.org */
+/* HSL Darken = level - n; Lighten = level + n */
 * {
-  scrollbar-color: #ECECEC transparent;
+  scrollbar-color: #f4f4f4 transparent;
   scrollbar-width: thin;
   cursor: default;
   /* word-break: break-word; */
@@ -21,7 +21,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #ECECEC;
+  background-color: #f4f4f4;
   border-radius: 0;
 }
 
@@ -32,12 +32,12 @@
 
 ::-moz-selection {
   color: #FFFFFF;
-  background: #1C7D7D;
+  background: #9a4bb3;
 }
 
 ::selection {
   color: #FFFFFF;
-  background: #1C7D7D;
+  background: #9a4bb3;
 }
 
 /* Scrollbar - End */
@@ -48,8 +48,8 @@ h4,
 h5,
 h6,
 .title {
-  font-family: "Montserrat", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
+  font-family: "AppTitle", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
   /* color: $primary; */
 }
 
@@ -252,7 +252,7 @@ label.checkbox + .checkbox {
 }
 label .active,
 label input:checked + .label {
-  color: #34A853;
+  color: #5c2d6b;
   font-weight: bold;
 }
 label input[type=radio],
@@ -285,7 +285,7 @@ input[type=checkbox] {
   padding: 0 !important;
   margin: 0;
   border-radius: 0.5rem;
-  background-color: #ECECEC;
+  background-color: #757575;
   opacity: 1;
 }
 input[type=checkbox]::before {
@@ -298,7 +298,7 @@ input[type=checkbox]::before {
   transition: width 0.25s ease;
 }
 .bg-secondary input[type=checkbox]::before {
-  background-color: #ECECEC;
+  background-color: #757575;
 }
 input[type=checkbox]::after {
   content: "";
@@ -309,7 +309,7 @@ input[type=checkbox]::after {
   width: 1rem;
   height: 1rem;
   padding: 0.25rem;
-  background-color: #34A853;
+  background-color: #5c2d6b;
   border-radius: 50%;
   transform: translate(0, -50%);
   transition: left 0.25s ease, transform 0.25s ease;
@@ -610,7 +610,7 @@ input[type=file] {
   align-items: center;
 }
 .btn:focus {
-  outline: 1px solid #e4f7e9;
+  outline: 1px solid #d6b6e1;
 }
 .btn:not(.no-rounded) {
   border-radius: 0.5rem;
@@ -711,7 +711,7 @@ input[type=file] {
 }
 .tabular thead,
 .tabular .tabular-header {
-  color: #1C7D7D;
+  color: var(--secondary, #7b3c8f);
   font-weight: bold;
 }
 .tabular thead.sticky th,
@@ -733,7 +733,7 @@ input[type=file] {
 .tabular tr:nth-child(even):not(.tabular-header),
 .tabular > .row:nth-child(even):not(.tabular-header),
 .tabular .scrollable > .row:nth-child(even):not(.tabular-header) {
-  background-color: #ECECEC;
+  background-color: #757575;
 }
 .tabular tr [class*=col],
 .tabular > .row [class*=col],
