--- a/styles/index.scss
+++ b/styles/index.scss
@@ -4,7 +4,7 @@
 */
 @import 'variables';
 @import 'bootstrap.css';
-@import 'fontawesome.css', 'animations.css', 'colors.css', 'app.css', 'pages.css', 'sidebar.css';
+@import 'fontawesome.css', 'animations.css', 'colors.css', 'sizes.css', 'app.css', 'pages.css', 'sidebar.css';
 
 body {
   font-family: 'AppContent', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -23,42 +23,42 @@ body {
 
 @font-face {
   font-family: 'AppTitle';
-  src: url('fonts/AppTitle-Light.ttf');
+  src: url('/fonts/AppTitle-Light.ttf');
   font-weight: 100;
 }
 
 @font-face {
   font-family: 'AppTitle';
-  src: url('fonts/AppTitle-Regular.ttf');
+  src: url('/fonts/AppTitle-Regular.ttf');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'AppTitle';
-  src: url('fonts/AppTitle-Medium.ttf');
+  src: url('/fonts/AppTitle-Medium.ttf');
   font-weight: 500;
 }
 
 @font-face {
   font-family: 'AppTitle';
-  src: url('fonts/AppTitle-Bold.ttf');
+  src: url('/fonts/AppTitle-Bold.ttf');
   font-weight: 700;
 }
 
 @font-face {
   font-family: 'AppContent';
-  src: url('fonts/AppContent-Light.ttf');
+  src: url('/fonts/AppContent-Light.ttf');
   font-weight: 100;
 }
 
 @font-face {
   font-family: 'AppContent';
-  src: url('fonts/AppContent-Regular.ttf');
+  src: url('/fonts/AppContent-Regular.ttf');
   font-weight: 300;
 }
 
 @font-face {
   font-family: 'AppContent';
-  src: url('fonts/AppContent-Bold.ttf');
+  src: url('/fonts/AppContent-Bold.ttf');
   font-weight: 500;
 }
