--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -33,18 +33,16 @@ $yellow: #C4C400 !default;
 $gold: #FFDF00 !default;
 $pink: #ED028C !default;
 $success: #24B624 !default;
-$warning: #F98F00 !default;
+$warning: #FFC107 !default;
 $danger: #DC3545 !default;
 $info: #17A2b8 !default;
-$muted: #5B5B5B !default;
-$muted-light: #ECECEC !default;
+$muted: #7D7D7D !default;
 $border-color: #E4E4E4 !default;
 $card-shadow: 0 1px 30px -10px transparentize($black, 0.5) !default;
-
 $app-font-size: 0.85rem;
 
 $app-colors-mapped: () !default;
-$app-hsl-mapped: () !default;
+$app-hsla-mapped: () !default;
 
 $app-colors-mapped: map-merge(('default': (bg: $default, fg: $white),
     'primary': (bg: $primary, fg: $white),
@@ -53,24 +51,9 @@ $app-colors-mapped: map-merge(('default': (bg: $default, fg: $white),
     'black': (bg: $black, fg: $white),
     'gold': (bg: $gold, fg: $white),
     'info': (bg: $info, fg: $white),
-    // 'failed': (bg: $danger, fg: $white),
-    // 'denied': (bg: $danger, fg: $white),
-    // 'debit': (bg: $danger, fg: $white),
-    // 'danger': (bg: $danger, fg: $white),
-    // 'false': (bg: $danger, fg: $white),
     'error': (bg: $danger, fg: $white),
-    // 'paid': (bg: $success, fg: $white),
-    // 'approved': (bg: $success, fg: $white),
-    // 'credit': (bg: $success, fg: $white),
-    // 'credited': (bg: $success, fg: $white),
-    // 'successful': (bg: $success, fg: $white),
-    // 'completed': (bg: $success, fg: $white),
-    // 'true': (bg: $success, fg: $white),
     'success': (bg: $success, fg: $white),
-    // 'processing': (bg: $warning, fg: $white),
-    // 'pending': (bg: $warning, fg: $white),
-    // 'warning': (bg: $warning, fg: $white),
-    'warn': (bg: $warning, fg: $white),
+    'warn': (bg: $warning, fg: $black),
     'pink': (bg: $pink, fg: $white),
     'orange': (bg: $orange, fg: $white),
     'purple': (bg: $purple, fg: $white),
@@ -78,32 +61,24 @@ $app-colors-mapped: map-merge(('default': (bg: $default, fg: $white),
     'blue': (bg: $blue, fg: $white),
     'yellow': (bg: $yellow, fg: $white),
     'muted': (bg: $muted, fg: $white),
-    // 'muted-light': (bg: $muted-light, fg: $secondary),
     'transparent': (bg: transparent, fg: $default)), $app-colors-mapped);
 
 /* HSL Darken = level - n; Lighten = level + n */
 
 // /* Functions and Mixins */
 
-// @mixin app-badge-variant($color) {
-//   background-color: rgba($color, 0.25);
-//   border: none;
-//   color: darken($color, 10%);
-//   font-weight: normal;
-// }
-
-@mixin mapped-color-var-variant($selector, $k, $cm) {
+@mixin mapped-bg-color-var-variant($selector, $k, $cm) {
   #{$selector} {
-    background-color: hsl(var(--#{$k}-hs), var(--#{$k}-l));
-    color: var(--#{$k}-c, map-get($cm, "c"));
-    border-color: hsl(var(--#{$k}-hs), var(--#{$k}-l));
+    background-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), var(--#{$k}-a)) !important;
+    color: var(--#{$k}-c, map-get($cm, "fg")) !important;
+    border-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), var(--#{$k}-a)) !important;
 
     &.is-blur {
       backdrop-filter: blur(10px);
-      background-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), 0.5);
+      background-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), 0.5) !important;
 
       &:hover {
-        background-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), 0.25);
+        background-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), 0.25) !important;
       }
     }
   }
@@ -111,14 +86,44 @@ $app-colors-mapped: map-merge(('default': (bg: $default, fg: $white),
   a#{$selector},
   button#{$selector} {
     &:hover {
-      background-color: hsl(var(--#{$k}-hs), calc(var(--#{$k}-l) - 10%));
+      background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 10%), var(--#{$k}-a)) !important;
       color: var(--#{$k}-c, map-get($cm, "c"));
     }
 
     &:active {
-      background-color: hsl(var(--#{$k}-hs), calc(var(--#{$k}-l) - 20%)) !important;
+      background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 20%), var(--#{$k}-a)) !important;
     }
   }
+}
+
+@mixin mapped-bg-color-variant($selector, $cm) {
+  #{$selector} {
+    background-color: map-get($cm, "bg") !important;
+    color: map-get($cm, "fg") !important;
+    border: none;
+
+    &.is-blur {
+      backdrop-filter: blur(10px);
+      background-color: transparentize(map-get($cm, "bg"), 0.5) !important;
+
+      &:hover {
+        background-color: transparentize(map-get($cm, "bg"), 0.25) !important;
+      }
+    }
+  }
+
+  a#{$selector},
+  button#{$selector} {
+    &:hover {
+      background-color: darken(map-get($cm, "bg"), 10%) !important;
+      color: map-get($cm, "fg") !important;
+    }
+
+    &:active {
+      background-color: darken(map-get($cm, "bg"), 20%) !important;
+    }
+  }
+
 }
 
 @mixin mapped-tabs-variant($selector, $cm) {
@@ -151,32 +156,37 @@ $app-colors-mapped: map-merge(('default': (bg: $default, fg: $white),
   }
 }
 
-@mixin mapped-color-variant($selector, $cm) {
+@mixin mapped-color-var-variant($selector, $k, $cm) {
   #{$selector} {
-    background-color: map-get($cm, "bg") !important;
-    color: map-get($cm, "fg") !important;
-    border: none;
-
-    &.is-blur {
-      backdrop-filter: blur(10px);
-      background-color: transparentize(map-get($cm, "bg"), 0.5) !important;
-
-      &:hover {
-        background-color: transparentize(map-get($cm, "bg"), 0.25) !important;
-      }
-    }
+    color: var(--#{$k}, map-get($cm, "bg")) !important;
   }
 
   a#{$selector},
   button#{$selector} {
     &:hover {
-      /* filter: brightness(110%) contrast(90%); */
-      background-color: darken(map-get($cm, "bg"), 10%) !important;
-      color: map-get($cm, "fg") !important;
+      color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 10%), var(--#{$k}-a)) !important;
     }
 
     &:active {
-      background-color: darken(map-get($cm, "bg"), 20%) !important;
+      color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 20%), var(--#{$k}-a)) !important;
+    }
+  }
+
+}
+
+@mixin mapped-color-variant($selector, $cm) {
+  #{$selector} {
+    color: map-get($cm, "bg") !important;
+  }
+
+  a#{$selector},
+  button#{$selector} {
+    &:hover {
+      color: darken(map-get($cm, "bg"), 10%) !important;
+    }
+
+    &:active {
+      color: darken(map-get($cm, "bg"), 20%) !important;
     }
   }
 
@@ -202,16 +212,15 @@ $app-colors-mapped: map-merge(('default': (bg: $default, fg: $white),
   }
 }
 
-
 @mixin mapped-alert-var-variant($selector, $k, $cm) {
   #{$selector} {
-    background-color: hsl(var(--#{$k}-hs), calc(var(--#{$k}-l) + 45%));
-    color: hsl(var(--#{$k}-hs), calc(var(--#{$k}-l) - 45%));
-    border-color: hsl(var(--#{$k}-hs), var(--#{$k}-l));
+    background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) + 45%), var(--#{$k}-a)) !important;
+    color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 45%), var(--#{$k}-a)) !important;
+    border-color: hsla(var(--#{$k}-hs), var(--#{$k}-l), var(--#{$k}-a)) !important;
 
     &.is-blur:not(:hover) {
-      backdrop-filter: blur(10px);
-      background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) + 45%), 0.5);
+      backdrop-filter: blur(10px) !important;
+      background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) + 45%), 0.5) !important;
     }
   }
 }
@@ -226,25 +235,25 @@ $app-colors-mapped: map-merge(('default': (bg: $default, fg: $white),
 
 @mixin mapped-outline-var-variant($selector, $k, $cm) {
   #{$selector} {
-    background-color: transparent;
-    color: hsl(var(--#{$k}-hs), var(--#{$k}-l));
-    border-color: currentColor;
+    background-color: transparent !important;
+    color: hsla(var(--#{$k}-hs), var(--#{$k}-l), var(--#{$k}-a)) !important;
+    border-color: currentColor !important;
 
     &.is-blur {
-      backdrop-filter: blur(10px);
-      background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 45%), 0.5);
+      backdrop-filter: blur(10px) !important;
+      background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 45%), 0.5) !important;
     }
   }
 
   a#{$selector},
   button#{$selector} {
     &:hover {
-      background-color: hsl(var(--#{$k}-hs), calc(var(--#{$k}-l) - 10%));
-      color: var(--#{$k}-c, map-get($cm, "c"));
+      background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 10%), var(--#{$k}-a)) !important;
+      color: var(--#{$k}-c, map-get($cm, "c")) !important;
     }
 
     &:active {
-      background-color: hsl(var(--#{$k}-hs), calc(var(--#{$k}-l) - 20%));
+      background-color: hsla(var(--#{$k}-hs), calc(var(--#{$k}-l) - 20%), var(--#{$k}-a)) !important;
     }
   }
 }
@@ -269,10 +278,3 @@ $app-colors-mapped: map-merge(('default': (bg: $default, fg: $white),
     }
   }
 }
-
-// @each $k,
-// $color in $theme-colors {
-//   .badge-#{$k} {
-//     @include app-badge-variant($color);
-//   }
-// }
