Using CSS 4 Var all through.
Now using CSS 4 Variable on every value variable.

1. Force loading spinner animation to appear when opaque and background color clash.
2. Calculated variable lightening.

--- a/css/index.css
+++ b/css/index.css
@@ -13,9 +13,9 @@
 /* HSL Darken = level - n; Lighten = level + n */
 body {
   font-family: "AppContent", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #FFFFFF;
-  color: #5B5B5B;
-  font-size: 0.85rem;
+  background-color: var(--default-background);
+  color: var(--default);
+  font-size: var(--app-font-size);
   font-weight: 300;
 }
 
