--- a/css/animations.css
+++ b/css/animations.css
@@ -23,12 +23,14 @@
 }
 
 .loading::after {
-  content: "";
+  content: "" !important;
   /* font-size: 200%; */
   font-family: "FontAwesome";
   display: flex;
   align-items: center;
   justify-content: center;
+  opacity: 1 !important;
+  background-color: unset !important;
   animation: rotate-clockwise 0.25s linear infinite;
 }
 
