--- a/styles/app.scss
+++ b/styles/app.scss
@@ -2,7 +2,7 @@
 @import 'variables';
 
 * {
-  scrollbar-color: lighten($muted, 60%) transparent;
+  scrollbar-color: hsl(var(--muted-hs), calc(var(--muted-l) + 60)) transparent;
   scrollbar-width: thin;
   cursor: default;
   /* word-break: break-word; */
@@ -21,7 +21,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: lighten($muted, 60%);
+  background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 60%));
   border-radius: 0
 }
 
@@ -31,13 +31,13 @@
 }
 
 ::-moz-selection {
-  color: $white;
-  background: lighten($secondary, 20%);
+  color: var(--white);
+  background: hsl(var(--muted-hs), calc(var(--muted-l) + 20%));
 }
 
 ::selection {
-  color: $white;
-  background: lighten($secondary, 20%);
+  color: var(--white);
+  background: hsl(var(--muted-hs), calc(var(--muted-l) + 20%));
 }
 
 /* Scrollbar - End */
@@ -51,7 +51,7 @@ h6,
 .title {
   font-family: 'AppTitle', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 500;
-  /* color: $primary; */
+  /* color: var(--primary); */
 }
 
 .app-icon {
@@ -65,7 +65,7 @@ h6,
   object-fit: contain;
 }
 
-.flex-buttons {
+.flex-container {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
@@ -92,7 +92,7 @@ h6,
     text-transform: capitalize;
     margin-right: auto;
     margin-bottom: 1rem;
-    color: $primary;
+    color: var(--primary);
 
     font: {
       size: 200%;
@@ -137,7 +137,7 @@ h6,
     margin-right: auto;
     margin-bottom: 1rem;
     font-weight: normal;
-    color: $primary;
+    color: var(--primary);
   }
 
   .btn {
@@ -195,7 +195,7 @@ hr[class*=s-] {
   min-width: 12.5rem;
   padding: 0;
   border-radius: 0.5rem;
-  box-shadow: $card-shadow;
+  box-shadow: var(--card-shadow);
 
   > {
     :first-child {
@@ -237,7 +237,7 @@ hr[class*=s-] {
   }
 
   &.has-error {
-    border: 1px solid $danger;
+    border: 1px solid var(--danger);
   }
 }
 
@@ -257,7 +257,7 @@ textarea {
   &:-webkit-input-placeholder,
   &::-webkit-input-placeholder {
     display: none;
-    color: $primary;
+    color: var(--primary);
     opacity: 0.75;
   }
 }
@@ -288,7 +288,7 @@ label {
 
   .active,
   input:checked+.label {
-    color: $secondary;
+    color: var(--secondary);
     font-weight: bold;
   }
 
@@ -322,7 +322,7 @@ input {
     padding: 0 !important;
     margin: 0;
     border-radius: 0.5rem;
-    background-color: lighten($muted, 10%);
+    background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 10));
     opacity: 1;
 
     &::before {
@@ -330,12 +330,12 @@ input {
       display: block;
       height: 100%;
       width: 1rem;
-      background-color: $secondary;
+      background-color: var(--secondary);
       border-radius: inherit;
       transition: width 0.25s ease;
 
       .bg-secondary & {
-        background-color: lighten($muted, 10%)
+        background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 10))
       }
     }
 
@@ -348,7 +348,7 @@ input {
       width: 1rem;
       height: 1rem;
       padding: 0.25rem;
-      background-color: $secondary;
+      background-color: var(--secondary);
       border-radius: 50%;
       transform: translate(0, -50%);
       transition: left 0.25s ease, transform 0.25s ease;
@@ -359,7 +359,7 @@ input {
     }
 
     &:checked::after {
-      background-color: $primary;
+      background-color: var(--primary);
       left: 100%;
       transform: translate(-100%, -50%);
     }
@@ -501,7 +501,6 @@ input {
   text-transform: capitalize;
   flex-wrap: wrap;
   padding: 1rem;
-  // $p: &;
 
   label {
     display: flex;
@@ -522,7 +521,6 @@ input {
   border-radius: 0.25rem;
   padding: 1rem;
   margin-bottom: 1rem;
-  $p: &;
 
   &.h-group::before {
     left: unset;
@@ -594,19 +592,19 @@ input {
     &::after,
     .hint {
       font-weight: bold;
-      color: $danger;
+      color: var(--danger);
     }
 
     .addon {
-      background-color: $danger !important;
-      color: $white !important;
+      background-color: var(--danger) !important;
+      color: var(--white) !important;
     }
 
     > {
 
       input,
       .input {
-        border: 1px solid $danger;
+        border: 1px solid var(--danger);
       }
     }
   }
@@ -616,12 +614,12 @@ input {
     &::after,
     .hint {
       /* font-weight: bold; */
-      color: $warning;
+      color: var(--warning);
     }
 
     input,
     .input {
-      border: 1px solid $warning;
+      border: 1px solid var(--warning);
     }
   }
 
@@ -629,7 +627,7 @@ input {
 
     &::after,
     .hint {
-      color: $info;
+      color: var(--info);
     }
   }
 
@@ -728,7 +726,7 @@ input {
   align-items: center;
 
   &:focus {
-    outline: 1px solid lighten($secondary, 50%);
+    outline: 1px solid hsl(var(--secondary-hs), calc(var(--secondary-l) + 50));
   }
 
   &:not(.no-rounded) {
@@ -800,10 +798,10 @@ input {
 }
 
 .tabular {
-  color: $black;
+  color: var(--black);
   border-collapse: separate;
   border-spacing: 0;
-  background-color: $white;
+  background-color: var(--white);
   /* font-size: 90%; */
 
   &,
@@ -832,7 +830,7 @@ input {
         bottom: 0;
         right: 0;
         position: absolute;
-        border-right: thin solid $border-color
+        border-right: thin solid var(--border-color)
       } */
     }
 
@@ -847,7 +845,7 @@ input {
 
   thead,
   .tabular-header {
-    color: var(--secondary, lighten($secondary, 10%));
+    color: var(--secondary, hsl(var(--secondary-hs), calc(var(--secondary-l) + 10)));
     font-weight: bold;
 
     &.sticky {
@@ -868,11 +866,9 @@ input {
     border-radius: 0.5rem;
     margin: 0 0 0.25rem;
     // font-size: 90%;
-    background-color: $white;
-
+    background-color: var(--white);
 
     &:nth-child(even):not(.tabular-header) {
-      // background-color: lighten($muted, 10%);
       background-color: hsl(var(--muted-hs), calc(var(--muted-l) + 60%));
     }
 
@@ -905,7 +901,7 @@ input {
           bottom: 0;
           right: 0;
           position: absolute;
-          border-right: thin solid $border-color;
+          border-right: thin solid var(--border-color);
         }
       }
 
@@ -1081,7 +1077,7 @@ input {
 
   /* overflow: hidden; */
   &.flex-card {
-    border: 1px solid $border-color;
+    border: 1px solid var(--border-color);
     border-radius: 0.5rem;
     background-clip: border-box;
 
@@ -1171,7 +1167,7 @@ input {
       height: 100%;
       width: 100%;
       position: absolute;
-      box-shadow: $card-shadow;
+      box-shadow: var(--card-shadow);
       border-radius: inherit;
       top: 0;
       left: 0;
@@ -1213,7 +1209,7 @@ input {
 
       > {
         .label {
-          color: $muted;
+          color: var(--muted);
           width: 100%;
         }
 
@@ -1224,7 +1220,7 @@ input {
       }
 
       &+.item {
-        border-top: 1px solid $border-color;
+        border-top: 1px solid var(--border-color);
       }
     }
   }
@@ -1241,7 +1237,7 @@ input {
 
   .modal-header {
     justify-content: flex-start;
-    border-bottom: 2px solid $primary;
+    border-bottom: 2px solid var(--primary);
 
     &:hover .close {
       opacity: 1;
@@ -1266,7 +1262,7 @@ input {
       transition: color 0.25s, opacity 0.25s;
 
       &:hover {
-        color: $danger
+        color: var(--danger)
       }
 
       &::after,
@@ -1318,8 +1314,8 @@ input {
     padding: 0.5rem 0.75rem;
     border-radius: 0.25rem;
     width: 100%;
-    border: 1px solid $border-color;
-    color: $primary;
+    border: 1px solid var(--border-color);
+    color: var(--primary);
     background-color: transparent;
     cursor: pointer;
 
@@ -1358,7 +1354,7 @@ input {
 
 .list .item+.item {
   padding-top: 1rem;
-  border-top: 1px solid $border-color;
+  border-top: 1px solid var(--border-color);
 }
 
 .accordion-tab {
@@ -1448,7 +1444,7 @@ section {
     }
   }
 
-  .flex-buttons {
+  .flex-container {
     /* flex-direction: column; */
     width: 100%;
 
