Update Tabs Variable
1. Using CSS4 --var on tabs component now.
2. Isolated app-header from page-container.
3. Added top and bottom margins to card-title.

--- a/css/app.css
+++ b/css/app.css
@@ -1043,6 +1043,9 @@ input[type=file] {
 .card + .card {
   margin-top: 1rem;
 }
+.card .card-title {
+  margin: 1rem 0 0.75rem;
+}
 .card .card-header,
 .card .card-footer {
   background-color: transparent;
