--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1179,6 +1179,10 @@ input {
     margin-top: 1rem;
   }
 
+  .card-title {
+    margin: 1rem 0 0.75rem;
+  }
+
   .card-header,
   .card-footer {
     background-color: transparent;
